<resources>
    <string name="app_name">RibbitNew</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signup_string">Don\'t have an account? Sign Up!</string>
    <string name="loginEmpty">Por favor preencha todos os campos</string>
    <string name="ok">OK</string>
    <string name="action_logout_text">Logout</string>
    <string name="email_hint">E-mail</string>
    <string name="signup_hint">Sign Up</string>
    <string name="message">Por favor preencha todos os campos</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="empty_list">No new messages</string>
    <string name="empty_friends">Add Friends to Begin</string>
    <string name="action_friends_edit_menu_text">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="action_camera_text">Camera</string>
    <string name="external_storage_unavailable">There was a problem accessing your device\'s external storage.</string>
    <string name="error_msg">Picture was canceled</string>
    <string name="captura_cancelada">Captura da foto cancelada</string>
    <string name="video_too_large">The selected video must be less than 10 MB</string>
    <string name="error_selected_file">There was an error with the selected file</string>
    <string name="file_too_large">The selected file is too large, select a new file</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="choose_friends">Choose some friends first!</string>
    <string name="action_send">Send</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="aplicativo">Ribbit</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_checkmark">User checkmark</string>
    <string name="user_push_message">You have a new Ribbit message from %s</string>

</resources>
